--- a/python-for-data-science/02-data-structures/2.1-Tuples.ipynb
+++ b/python-for-data-science/02-data-structures/2.1-Tuples.ipynb
@@ -244,11 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('disco', 10, 1.2)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create your first tuple\n",
     "\n",
@@ -265,11 +276,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print the type of the tuple you created\n",
     "\n",
@@ -306,11 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "disco\n",
+      "10\n",
+      "1.2\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the variable on each index\n",
     "\n",
@@ -328,11 +360,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the type of value on each index\n",
     "\n",
@@ -364,11 +406,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use negative index to get the value of the last element\n",
     "\n",
@@ -384,11 +437,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use negative index to get the value of the second last element\n",
     "\n",
@@ -424,11 +488,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('disco', 10, 1.2, 'hard rock', 10)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Concatenate two tuples\n",
     "\n",
@@ -466,11 +541,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('disco', 10, 1.2)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Slice from index 0 to index 2\n",
     "\n",
@@ -486,11 +572,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('hard rock', 10)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Slice from index 3 to index 4\n",
     "\n",
@@ -506,11 +603,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get the length of tuple\n",
     "\n",
@@ -547,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -567,11 +675,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 5, 6, 6, 8, 9, 9, 10]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Sort the tuple\n",
     "\n",
@@ -595,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -622,11 +741,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element 0 of Tuple:  1\n",
+      "Element 1 of Tuple:  2\n",
+      "Element 2 of Tuple:  ('pop', 'rock')\n",
+      "Element 3 of Tuple:  (3, 4)\n",
+      "Element 4 of Tuple:  ('disco', (1, 2))\n"
+     ]
+    }
+   ],
    "source": [
     "# Print element on each index\n",
     "\n",
@@ -660,11 +791,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element 2, 0 of Tuple:  pop\n",
+      "Element 2, 1 of Tuple:  rock\n",
+      "Element 3, 0 of Tuple:  3\n",
+      "Element 3, 1 of Tuple:  4\n",
+      "Element 4, 0 of Tuple:  disco\n",
+      "Element 4, 1 of Tuple:  (1, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# Print element on each index, including nest indexes\n",
     "\n",
@@ -732,11 +876,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print the first element in the second nested tuples\n",
     "\n",
@@ -786,11 +941,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('pop',\n",
+       " 'rock',\n",
+       " 'soul',\n",
+       " 'hard rock',\n",
+       " 'soft rock',\n",
+       " 'R&B',\n",
+       " 'progressive rock',\n",
+       " 'disco')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# sample tuple\n",
     "\n",
@@ -808,13 +981,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "tupleLen = len(genres_tuple)\n",
+    "print(tupleLen)\n"
    ]
   },
   {
@@ -844,13 +1027,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hard rock\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "x = genres_tuple[3]\n",
+    "print(x)\n"
    ]
   },
   {
@@ -873,13 +1066,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('hard rock', 'soft rock')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "\n",
+    "y = genres_tuple[3:6]\n",
+    "print(y)"
    ]
   },
   {
@@ -902,13 +1106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('pop', 'rock')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "x = genres_tuple[:2]\n",
+    "print(x)"
    ]
   },
   {
@@ -931,13 +1145,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "x = genres_tuple.index(\"disco\")\n",
+    "print(x)"
    ]
   },
   {
@@ -960,13 +1184,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5, 1, 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "C_tuple = (-5,1,3)\n",
+    "list = sorted(C_tuple)\n",
+    "print(list)"
    ]
   },
   {
@@ -1034,7 +1269,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 ('python-for-data-science': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -1048,7 +1283,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7699fd81a2a13b2b7a1900ad37ee5028b043fc7ebe5279c5ac33517439a2ad77"
+   }
   }
  },
  "nbformat": 4,
