--- a/python-for-data-science/02-data-structures/2.2-Lists.ipynb
+++ b/python-for-data-science/02-data-structures/2.2-Lists.ipynb
@@ -252,11 +252,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Michael Jackson', 10.1, 1982]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a list\n",
     "\n",
@@ -280,11 +291,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the same element using negative and positive indexing:\n",
+      " Postive: Michael Jackson \n",
+      " Negative: Michael Jackson\n",
+      "the same element using negative and positive indexing:\n",
+      " Postive: 10.1 \n",
+      " Negative: 10.1\n",
+      "the same element using negative and positive indexing:\n",
+      " Postive: 1982 \n",
+      " Negative: 1982\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the elements on each index\n",
     "\n",
@@ -312,11 +339,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Michael Jackson', 10.1, 1982, [1, 2], ('A', 1)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Sample List\n",
     "\n",
@@ -339,11 +377,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Michael Jackson', 10.1, 1982, 'MJ', 1]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Sample List\n",
     "\n",
@@ -360,11 +409,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MJ', 1]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# List slicing\n",
     "\n",
@@ -402,11 +462,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Michael Jackson', 10.2, ['pop', 10]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use append to add elements to list\n",
     "\n",
@@ -424,11 +495,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Michael Jackson', 10.2, 'pop', 10]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use extend to add elements to list\n",
     "\n",
@@ -446,11 +528,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Michael Jackson', 10.2, 'pop', 10, ['a', 'b']]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use append to add elements to list\n",
     "\n",
@@ -467,11 +560,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before change: ['disco', 10, 1.2]\n",
+      "After change: ['hard rock', 10, 1.2]\n"
+     ]
+    }
+   ],
    "source": [
     "# Change the element based on the index\n",
     "\n",
@@ -490,11 +592,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before change: ['hard rock', 10, 1.2]\n",
+      "After change: [10, 1.2]\n"
+     ]
+    }
+   ],
    "source": [
     "# Delete the element based on the index\n",
     "\n",
@@ -512,11 +623,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hard', 'rock']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Split the string, default is by space\n",
     "\n",
@@ -532,11 +654,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'C', 'D']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Split the string by comma\n",
     "\n",
@@ -559,11 +692,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A: ['hard rock', 10, 1.2]\n",
+      "B: ['hard rock', 10, 1.2]\n"
+     ]
+    }
+   ],
    "source": [
     "# Copy (copy by reference) the list A\n",
     "\n",
@@ -589,11 +731,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B[0]: hard rock\n",
+      "B[0]: banana\n"
+     ]
+    }
+   ],
    "source": [
     "# Examine the copy by reference\n",
     "\n",
@@ -660,11 +811,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B[0]: banana\n",
+      "B[0]: hard rock\n"
+     ]
+    }
+   ],
    "source": [
     "print('B[0]:', B[0])\n",
     "A[0] = \"hard rock\"\n",
@@ -687,13 +847,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'hello', [1, 2, 3], True]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "a_list = [1, \"hello\", [1,2,3], True]\n",
+    "print(a_list)"
    ]
   },
   {
@@ -717,13 +887,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "x = a_list[1]\n",
+    "print(x)"
    ]
   },
   {
@@ -746,13 +926,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', [1, 2, 3], True]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "y = a_list[1:4]\n",
+    "print(y)"
    ]
   },
   {
@@ -775,13 +965,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'a', 2, 1, 'd']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "A = [1, 'a']\n",
+    "B = [2,1,'d']\n",
+    "AB = A + B\n",
+    "print(AB)"
    ]
   },
   {
@@ -849,7 +1051,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 ('python-for-data-science': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -863,7 +1065,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7699fd81a2a13b2b7a1900ad37ee5028b043fc7ebe5279c5ac33517439a2ad77"
+   }
   }
  },
  "nbformat": 4,
